# qmake2cmake

./: .gitignore  README_CN.md  problems.md  qmake2cmake.sh
tests/SubdirsDemo/: CMakeLists.txt  SubdirsDemo.pro
tests/SubdirsDemo/entrance/: CMakeLists.txt  entrance.pro  main.cpp
tests/SubdirsDemo/firstlib/: CMakeLists.txt  firstlib.cpp  firstlib.h  firstlib.pro  firstlib_global.h
tests/SubdirsDemo/secondlib/: CMakeLists.txt  secondlib.cpp  secondlib.h  secondlib.pro  secondlib_global.h
